--- a/_posts/2023-03-28-ualpaca.markdown
+++ b/_posts/2023-03-28-ualpaca.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "UAlpaca"
 date:   2023-03-28 22:21:59 +00:00
-image: /images/dashpoint.png
+image: /images/ualpaca.png
 categories: github
 code: https://github.com/robinhad/kruk
 ---
